--- a/results.ipynb
+++ b/results.ipynb
@@ -54,6 +54,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e6b90fb9",
+   "metadata": {},
+   "source": [
+    "початковий розмір файлу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e534639a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "911282"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "misto_size = os.stat('./compression/pidmohylnyy-valerian-petrovych-misto76.txt').st_size\n",
+    "misto_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e4fe2b7",
    "metadata": {},
    "source": [
@@ -62,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2f16bc93",
    "metadata": {},
    "outputs": [
@@ -72,14 +104,12 @@
        "277784"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
     "misto_size_built = os.stat('./compression/pidmohylnyy-valerian-petrovych-misto76.txt.zip').st_size\n",
     "misto_size_built"
    ]
@@ -94,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e959921c",
    "metadata": {},
    "outputs": [
@@ -104,13 +134,13 @@
        "304038"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "misto_size_huffman = os.stat('./compressed_misto.bin').st_size\n",
+    "misto_size_huffman = os.stat('./compressed_misto_huffman.bin').st_size\n",
     "misto_size_huffman"
    ]
   },
@@ -120,6 +150,36 @@
    "metadata": {},
    "source": [
     "#### Приклад - великий json file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83a742fe",
+   "metadata": {},
+   "source": [
+    "початковий розмір файлу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2db3adee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26141343"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_size = os.stat('./compression/large-file.json').st_size\n",
+    "json_size"
    ]
   },
   {
@@ -162,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "260192eb",
    "metadata": {},
    "outputs": [
@@ -172,13 +232,13 @@
        "17012930"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "big_json_huffman_size = os.stat('./compressed_json.bin').st_size\n",
+    "big_json_huffman_size = os.stat('./compressed_json_huffman.bin').st_size\n",
     "big_json_huffman_size"
    ]
   },
@@ -192,6 +252,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7370c14",
+   "metadata": {},
+   "source": [
+    "початковий розмір файлу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d0d6e4e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17317579"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_size = os.stat('./compression/customers-100000.csv').st_size\n",
+    "csv_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2f2ec1e9",
    "metadata": {},
    "source": [
@@ -200,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0aa68e56",
    "metadata": {},
    "outputs": [
@@ -210,7 +300,7 @@
        "8197738"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "45efeca8",
    "metadata": {},
    "outputs": [
@@ -240,13 +330,13 @@
        "11956603"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "customers_100000_huffman_size = os.stat('compressed_customers_100000.bin').st_size\n",
+    "customers_100000_huffman_size = os.stat('compressed_customers_100000_huffman.bin').st_size\n",
     "customers_100000_huffman_size"
    ]
   },
