feat: enhance LZ77 algorithm with hash-based indexing and update results notebook

--- a/results.ipynb
+++ b/results.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e534639a",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "911282"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,6 +350,66 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7cebcd6",
+   "metadata": {},
+   "source": [
+    "Реалізація алгоритму стиснення LZ77, заснованого на принципі ковзного вікна (sliding window). Алгоритм знаходить повторювані послідовності байтів у нещодавно оброблених даних і замінює їх посиланнями формату (відстань назад, довжина збігу). Байти, що не мають збігів, кодуються як є (літерали).\n",
+    "\n",
+    "Основні компоненти:\n",
+    "\n",
+    "    Клас LZ77: Інкапсулює всю логіку стиснення та декомпресії. Має конфігурований розмір ковзного вікна (window_size) та фіксований розмір буфера попереднього перегляду (lookahead_buffer_size).\n",
+    "    Функція find_match:\n",
+    "        Здійснює пошук найдовшого збігу для поточної позиції даних у межах ковзного вікна.\n",
+    "        Використовує хеш-таблицю (dict) для швидкого пошуку потенційних кандидатів на збіг (індексує позиції за хешем 3-байтових послідовностей).\n",
+    "        Оптимізація: Включає механізм очищення хеш-таблиці від застарілих записів (позицій, що вийшли за межі ковзного вікна) перед перебором кандидатів, що прискорює пошук у великих файлах. Очищення реалізоване через list comprehension.\n",
+    "    Функція compress_file:\n",
+    "        Виконує процес стиснення файлу.\n",
+    "        Читає вхідний файл за допомогою mmap та використовує memoryview для ефективного доступу до даних без зайвого копіювання.\n",
+    "        Ітерує по даних, викликаючи find_match для пошуку збігів.\n",
+    "        Формує вихідний стиснений потік бітів за допомогою бібліотеки bitarray. Схема кодування:\n",
+    "            Збіг: 1 біт-прапорець (True) + 16 бітів (12 біт відстань, 4 біти довжина).\n",
+    "            Літерал: 1 біт-прапорець (False) + 8 бітів (байт літерала).\n",
+    "        Метадані: Зберігає на початку стисненого файлу інформацію про розширення оригінального файлу (довжину та самі байти розширення), використовуючи модуль struct.\n",
+    "    Функція decompress_file:\n",
+    "        Виконує процес декомпресії.\n",
+    "        Читає метадані (розширення) з початку файлу.\n",
+    "        Читає основний потік стиснених даних у bitarray.\n",
+    "        Декодує бітовий потік, розрізняючи літерали та пари (відстань, довжина) за прапорцем.\n",
+    "        Відтворює оригінальні дані в bytearray, або додаючи літерали, або копіюючи послідовності з уже декодованої частини буфера відповідно до (відстань, довжина).\n",
+    "        Записує відновлені дані у вихідний файл із збереженим оригінальним розширенням.\n",
+    "\n",
+    "Інші використані структури/модулі:\n",
+    "\n",
+    "    mmap / memoryview: Для ефективної роботи з файлами та доступу до даних в пам'яті.\n",
+    "    dict (хеш-таблиця): Для індексації позицій та прискорення пошуку збігів.\n",
+    "    bitarray: Для гнучкої роботи з бітовими потоками змінної довжини.\n",
+    "    struct: Для пакування/розпакування бінарних метаданих (інформації про розширення).\n",
+    "    List comprehension: Використовується для реалізації механізму очищення хеш-таблиці."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f82c8a7",
+   "metadata": {},
+   "source": [
+    "Тестування программи на стиснення файлів проводилося на фйлах (у дургих дужках розміри після стисненян 7 zip):\n",
+    "- biblija.txt (7,81 МБ ) (2205 кб)\n",
+    "- customers-100000.csv (16.5 мб) (8006 кб)\n",
+    "- large-file.json (24,9 мб) (3754 кб)\n",
+    "- harrypotter.txt (6.21 мб) (2354 кб)\n",
+    "- pidmohylnyy-valerian-petrovych-misto76 (889 кб) (270 кб) \n",
+    "\n",
+    "\n",
+    "після стисення фалий отримють рощирення .lz77 \n",
+    "- biblij.lz7 (4131 кб)\n",
+    "- customers-100000.lz77 (12862 кб)\n",
+    "- harrypotter.lz77 (3984 кб)\n",
+    "- large-file.lz77 (10057 кб)\n",
+    "- pidmohylnyy-valerian-petrovych-misto76.lz77 (470)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fdd244c8",
    "metadata": {},
    "source": [
@@ -381,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
