fix: correct size unit for pidmohylnyy-valerian-petrovych-misto76.lz77 in results notebook

--- a/results.ipynb
+++ b/results.ipynb
@@ -405,7 +405,7 @@
     "- customers-100000.lz77 (12862 кб)\n",
     "- harrypotter.lz77 (3984 кб)\n",
     "- large-file.lz77 (10057 кб)\n",
-    "- pidmohylnyy-valerian-petrovych-misto76.lz77 (470)\n"
+    "- pidmohylnyy-valerian-petrovych-misto76.lz77 (470 кб)\n"
    ]
   },
   {
