LZ78 explanation added

--- a/results.ipynb
+++ b/results.ipynb
@@ -418,6 +418,328 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3707bb6f",
+   "metadata": {},
+   "source": [
+    "Алгоритм LZ78 реалізований як клас `LZ78Compressor`, що включає методи для стиснення та розпакування файлів і даних.\n",
+    "\n",
+    "- Метод `compress(data: bytes)` приймає байтові дані та виконує стиснення за допомогою словника, який будується динамічно. Алгоритм зчитує послідовності байтів, які вже зустрічалися, і замінює їх індексами в словнику разом з наступним байтом. Повертається список пар `(індекс, байт)`.\n",
+    "\n",
+    "- Метод `decompress(pairs: list[tuple[int, bytes]])` приймає список пар `(індекс, байт)` та динамічно будує словник для відновлення оригінальних даних. Починаючи з пустого словника, він реконструює кожен фрагмент і об’єднує їх у повні дані. Повертає розпаковані байти.\n",
+    "\n",
+    "- Метод `compress_file(input_path: str, output_path: str)` зчитує файл у байтовому форматі, стискає вміст за допомогою `compress`, і зберігає стиснені пари у бінарному файлі. Індекси зберігаються як 4 байти, після чого йде сам байт.\n",
+    "\n",
+    "- Метод `decompress_file(input_path: str, output_path: str)` читає бінарний файл, інтерпретує його як послідовність стиснених пар `(індекс, байт)` і відновлює початкові байти за допомогою `decompress`. Відновлені дані записуються у вивідний файл.\n",
+    "\n",
+    "Інші використані структури:\n",
+    "\n",
+    "- `dict` — використовується як словник для збереження повторних послідовностей під час стиснення та розпакування.\n",
+    "\n",
+    "- `bytearray` — застосовується для ефективного зберігання результату під час розпакування.\n",
+    "\n",
+    "- `int.to_bytes` і `int.from_bytes` — вбудовані методи Python для перетворення цілих чисел у байти та навпаки, що дозволяє працювати з файлами без потреби в зовнішніх бібліотеках.\n",
+    "\n",
+    "Цей підхід дозволяє стискати будь-які типи файлів, оскільки працює з байтами, а не рядками.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8303bbfe",
+   "metadata": {},
+   "source": [
+    "#### Приклад - \"Місто\", формат txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d69bd28",
+   "metadata": {},
+   "source": [
+    "початковий розмір файлу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "28fdfad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "911282"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "misto_size = os.stat('./compression/pidmohylnyy-valerian-petrovych-misto76.txt').st_size\n",
+    "misto_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfb8cb07",
+   "metadata": {},
+   "source": [
+    "вбудований zip-архіватор"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "191aa7dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "277752"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "misto_size_built = os.stat('./compression/pidmohylnyy-valerian-petrovych-misto76.txt.zip').st_size\n",
+    "misto_size_built"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f25d28c5",
+   "metadata": {},
+   "source": [
+    "Кодування LZ78"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7478c460",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "699485"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "misto_size_lz78 = os.stat('./compression/compressed_misto_lz78.bin').st_size\n",
+    "misto_size_lz78"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "795860fb",
+   "metadata": {},
+   "source": [
+    "#### Приклад - великий json file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b132208",
+   "metadata": {},
+   "source": [
+    "початковий розмір файлу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c34f64ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26141343"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_size = os.stat('./compression/large-file.json').st_size\n",
+    "json_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70bd677f",
+   "metadata": {},
+   "source": [
+    "вбудований zip-архіватор"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5b7def7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3845074"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_json_size = os.stat('./compression/large-file.json.zip').st_size\n",
+    "big_json_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "895ffcb4",
+   "metadata": {},
+   "source": [
+    "Кодування LZ78"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "64b22ee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10461282"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_json_lz78_size = os.stat('./compression/compressed_json_lz78.bin').st_size\n",
+    "big_json_lz78_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "964a9a90",
+   "metadata": {},
+   "source": [
+    "#### Приклад - csv файл з користувачами на 100000 рядків"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6e4e3a2",
+   "metadata": {},
+   "source": [
+    "початковий розмір файлу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1efa379c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17317579"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_size = os.stat('./compression/customers-100000.csv').st_size\n",
+    "csv_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1e5b886",
+   "metadata": {},
+   "source": [
+    "вбудований zip-архіватор"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e3bf4c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8197707"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customers_100000_size = os.stat('./compression/customers-100000.csv.zip').st_size\n",
+    "customers_100000_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c3a477",
+   "metadata": {},
+   "source": [
+    "Кодування LZ78"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4c95a61d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14171645"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customers_100000_lz78_size = os.stat('./compression/compressed_customers_100000_lz78.bin').st_size\n",
+    "customers_100000_lz78_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1078f258",
    "metadata": {},
    "source": [
@@ -789,7 +1111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
