added info for imgs and audio

--- a/results.ipynb
+++ b/results.ipynb
@@ -45,6 +45,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "639edfca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "84815d5d",
    "metadata": {},
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e534639a",
    "metadata": {},
    "outputs": [
@@ -78,8 +88,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
     "misto_size = os.stat('./compression/pidmohylnyy-valerian-petrovych-misto76.txt').st_size\n",
     "misto_size"
    ]
@@ -338,6 +346,202 @@
    "source": [
     "customers_100000_huffman_size = os.stat('compressed_customers_100000_huffman.bin').st_size\n",
     "customers_100000_huffman_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9153bd3e",
+   "metadata": {},
+   "source": [
+    "#### Приклад jpeg file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00630571",
+   "metadata": {},
+   "source": [
+    "початковий розмір файлу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ecd288ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1375696"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_jpeg = os.stat('sample-jpeg.jpeg').st_size\n",
+    "sample_jpeg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcef60a8",
+   "metadata": {},
+   "source": [
+    "вбудований zip-архіватор"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d8a6649c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1369083"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_jpeg_zip = os.stat('sample-jpeg.jpeg.zip').st_size\n",
+    "sample_jpeg_zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9b676e4",
+   "metadata": {},
+   "source": [
+    "Кодування Гаффмана"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8a9a4edb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1375402"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_jpeg = os.stat('compressed_huffman.bin').st_size\n",
+    "sample_jpeg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21ef61ee",
+   "metadata": {},
+   "source": [
+    "#### Приклад .flac"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6201f40c",
+   "metadata": {},
+   "source": [
+    "початковий розмір файлу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22538b68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1986659"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_flac = os.stat('sample-flac-small.flac').st_size\n",
+    "sample_flac"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "537b5100",
+   "metadata": {},
+   "source": [
+    "вбудований zip-архіватор"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "251434fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1979286"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_flac_zip = os.stat('sample-flac-small.flac.zip').st_size\n",
+    "sample_flac_zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce789e74",
+   "metadata": {},
+   "source": [
+    "Кодування Гаффмана"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1b3ed525",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1986536"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_flac_huffman = os.stat('compressed_huffman.bin').st_size\n",
+    "sample_flac_huffman"
    ]
   },
   {
