--- a/results.ipynb
+++ b/results.ipynb
@@ -1297,6 +1297,140 @@
     "csv_lzw = os.stat('./compression/customers-100000.bin').st_size\n",
     "csv_lzw"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cbb9a52",
+   "metadata": {},
+   "source": [
+    "### RLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7a66e00",
+   "metadata": {},
+   "source": [
+    "## Опис алгоритму RLE\n",
+    "\n",
+    "Алгоритм RLE реалізований як клас `RLECompressor`, що включає методи для стиснення та розпакування файлів і байтових даних.\n",
+    "\n",
+    "- Метод `compress(data: bytes)` приймає послідовність байтів і стискає повторювані символи. Алгоритм знаходить серії однакових байтів та замінює їх парою `(count, byte)`. Наприклад, `AAAA` → `(4, A)`. Повертає список пар `(count: int, byte: bytes)`.\n",
+    "\n",
+    "- Метод `decompress(pairs: list[tuple[int, bytes]])` приймає список пар `(count, byte)` та відновлює оригінальну послідовність байтів, повторюючи кожен байт `count` разів. Повертає розпаковані байти.\n",
+    "\n",
+    "- Метод `compress_file(input_path: str, output_path: str)` читає вхідний файл у байтовому режимі, стискає вміст за допомогою `compress`, і записує у вихідний `.bin` файл. Кожна пара `(count, byte)` записується як: 1 байт для кількості (max 255) + 1 байт значення.\n",
+    "\n",
+    "- Метод `decompress_file(input_path: str, output_path: str)` читає стиснений файл у вигляді послідовності пар `(count, byte)` і відновлює повні байти. Результат записується у файл в оригінальному форматі.\n",
+    "\n",
+    "### Інші використані структури:\n",
+    "\n",
+    "- `bytearray` — використовується для поступового зберігання результату у пам’яті при декомпресії.\n",
+    "\n",
+    "- `int.to_bytes` і `int.from_bytes` — використовуються для кодування числових значень у байти (і навпаки), що забезпечує сумісність із будь-яким типом файлу.\n",
+    "\n",
+    "> **Примітка:** Через свою простоту, RLE ефективно стискає лише дані з великою кількістю повторюваних байтів (наприклад, монохромні зображення або послідовності з нулями). У випадках із складними, неповторюваними даними, алгоритм може навіть збільшити розмір файлу."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebda1a53",
+   "metadata": {},
+   "source": [
+    "#### Приклад стиску зображення, формату bmp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3185a8f0",
+   "metadata": {},
+   "source": [
+    "початковий розмір файлу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1621b8be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75202"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "bmp_size = os.stat('./compression/image1.bmp').st_size\n",
+    "bmp_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48a4036a",
+   "metadata": {},
+   "source": [
+    "вбудований zip-архіватор"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "beb2d90f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8801"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bmp_size_built = os.stat('./compression/image1.bmp.zip').st_size\n",
+    "bmp_size_built"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c2e509",
+   "metadata": {},
+   "source": [
+    "Кодування RLE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8899d911",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46810"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bmp_size_rle = os.stat('./compression/compressed_image1_rle.bin').st_size\n",
+    "bmp_size_rle"
+   ]
   }
  ],
  "metadata": {
