chore: names changed

--- a/testing_performance.ipynb
+++ b/testing_performance.ipynb
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "ba073d7b",
    "metadata": {},
    "outputs": [
@@ -1113,17 +1113,17 @@
     }
    ],
    "source": [
-    "size_compression_bmp = {}\n",
+    "size_compression_wav = {}\n",
     "algorithms = [\"dpcm\",\"huffman\"]\n",
     "for algorithm in algorithms:\n",
-    "    size_compression_bmp[algorithm] = test_size_compression(algorithm, './test/file_example_WAV_2MG.wav')\n",
+    "    size_compression_wav[algorithm] = test_size_compression(algorithm, './test/file_example_WAV_2MG.wav')\n",
     "\n",
-    "sizes_bmp = [alg[0] for alg in list(size_compression_bmp.values())]\n",
+    "sizes_wav = [alg[0] for alg in list(size_compression_wav.values())]\n",
     "algorithms.append(\"Початковий розмір\")\n",
-    "sizes_bmp.append(wav_size)\n",
+    "sizes_wav.append(wav_size)\n",
     "\n",
     "plt.figure(figsize=(8, 4))\n",
-    "plt.bar(algorithms, sizes_bmp, color='lightblue')\n",
+    "plt.bar(algorithms, sizes_wav, color='lightblue')\n",
     "plt.title(\"Розмір стисненого файлу\")\n",
     "plt.ylabel(\"Розмір файлу (KB)\")\n",
     "plt.grid(axis='y')\n",
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5b145bf4",
    "metadata": {},
    "outputs": [
@@ -1149,10 +1149,10 @@
     }
    ],
    "source": [
-    "times_bmp = [float(alg[1].strip()) for alg in list(size_compression_bmp.values())]\n",
+    "times_wav = [float(alg[1].strip()) for alg in list(size_compression_wav.values())]\n",
     "\n",
     "plt.figure(figsize=(8, 4))\n",
-    "plt.plot(algorithms[:-1], times_bmp, marker='o', linestyle='-', color='steelblue', label=\"Час стиснення\")\n",
+    "plt.plot(algorithms[:-1], times_wav, marker='o', linestyle='-', color='steelblue', label=\"Час стиснення\")\n",
     "\n",
     "plt.title(\"Тестування часу стиснення\")\n",
     "plt.ylabel(\"Час (секунди)\")\n",
